--- a/todo
+++ b/todo
@@ -2,17 +2,17 @@ TODO
 
 + add sign up button to home when the user isn't signed in
 + remove sing in, forgot password button from home when the user is signed in, replace it with sign out
-- add Sign Out button to any page where needed
 + add My Account button to home when the user is signed in
 + move change email, login, password function to My account
++ make account page to be accessible for signed in users only
++ make Sign Out button to redirect you to Home, check if it works
++ find out why SESSION is empty when request is sent though fetch
++ add pictures taken by user to side section of his account
+- add Sign Out button to any page where needed
 - find out what to do for verification email to be send from local server
 - check if I can use isset to find out if the user is logged in
-+ make Sign Out button to redirect you to Home, check if it works
 - rename all class files
-- make account page to be accessible for signed in users only
 - create account page layout
 - find out what to do with image size
-- for now I save user images in database. Is there a way to do this better?
-+ find out why SESSION is empty
-- add pictures taken by user to side section of his account
-- add if method to Route for authentication, rights check (see web.php)
+- check if more Route conditions should be added to web.php
+- check how to make rediect if condition is set and it isn't true
