--- a/todo
+++ b/todo
@@ -10,6 +10,7 @@ TODO
 + add pictures taken by user to side section of his account
 + add picture to user account when it is taken
 + add the ability for the user to delete photos
++ move stickers from photo to separate folder
 - add Sign Out button to any page where needed
 - find out what to do for verification email to be send from local server
 - check if I can use isset to find out if the user is logged in
@@ -18,4 +19,4 @@ TODO
 - find out what to do with image size
 - check if more Route conditions should be added to web.php
 - check how to make rediect if condition is set and it isn't true
-- move stickers from photo to separate folder
+- add sign in, sign up, forgot password forms to home page
