rewrote home.js in OOP style

--- a/todo
+++ b/todo
@@ -15,6 +15,8 @@ TODO
 + create photo details view or change page design for all comments to be seen
 + figure out how to count comments automatically after adding(, deleting)
 + limit comment message on client (8000 bytes)
++ add the ability to like and comment photos
++ replace add comment input with the message "Sign in to leave a comment"
 - add Sign Out button to any page where needed
 - find out what to do for verification email to be send from local server
 - check if I can use isset to find out if the user is logged in
@@ -24,8 +26,7 @@ TODO
 - check if more Route conditions should be added to web.php
 - check how to make rediect if condition is set and it isn't true
 - commented 404 redirect from now; check what happens with it
-- add the ability to like and comment photos
 - replace names with "picture" with "photo"
 - add error messages to form section
 - add the ability to delete comments (not mandatory)
-- replace add comment input with the message "Sign in to leave a comment"
+- add sign in verification on server side when like or comment is added
