simplified sticker changing

--- a/todo
+++ b/todo
@@ -32,3 +32,4 @@ TODO
 - add the ability to delete comments (not mandatory)
 - add sign in verification on server side when like or comment is added
 - find out if I can export, import without webpack
+- resolve the case with preventing scroll from scrolling when moving stickers
