fixed photo saving after drag and drop implementation

--- a/todo
+++ b/todo
@@ -20,6 +20,7 @@ TODO
 + get rid of preview element
 + resolve the case with preventing scroll from scrolling when moving stickers
 + find out if I can export, import without webpack
++ fix photo saving after drag and drop implementation
 
 - add Sign Out button to any page where needed
 - find out what to do for verification email to be send from local server
@@ -35,3 +36,4 @@ TODO
 - add the ability to delete comments (not mandatory)
 - add sign in verification on server side when like or comment is added
 - fix logout issue
+- check if I can make corner sticker resizing better
