--- a/todo
+++ b/todo
@@ -46,3 +46,4 @@ TODO
 - make sure you use JSON in body in fetch everywhere
 - think about covering fetch in some shorter function
 - think if you should return DB errors
+- think how to make HASH in database temporary
