--- a/todo
+++ b/todo
@@ -47,3 +47,5 @@ TODO
 - make sure you use JSON in body in fetch everywhere
 - think about covering fetch in some shorter function
 - think if you should return DB errors
+- remove fetchAll from DB requests where it isn't needed
+- empty $_SESSION data in one function
