added error processing callback to all fetches

--- a/todo
+++ b/todo
@@ -29,6 +29,8 @@ TODO
 + check how to make rediect if condition is set and it isn't true
 + add sign in verification on server side when like or comment is added
 + add email notifications about received comments
++ add gallery pagination
++ add error callback to all fetches
 
 - find out what to do for verification email to be send from local server
 - check if I can use isset to find out if the user is logged in
@@ -50,10 +52,8 @@ TODO
 - think if you should return DB errors
 - remove fetchAll from DB requests where it isn't needed
 - empty $_SESSION data in one function
-- add gallery pagination
 - add creating image on server side
 - add sharing image on social networks
-- add error callback to all fetches
 - remove ` from all DB requests where not needed
 - check why sendQuery doesn't work with limit param in external variable
 - make sure that body of all fetches is an object
