--- a/todo
+++ b/todo
@@ -31,6 +31,7 @@ TODO
 + add email notifications about received comments
 + add gallery pagination
 + add error callback to all fetches
++ make sure that body of all fetches is a JSON stringified object
 
 - find out what to do for verification email to be send from local server
 - check if I can use isset to find out if the user is logged in
@@ -47,7 +48,6 @@ TODO
 - should I incrypt the password before sending it?
 - fix logout issue
 
-- make sure you use JSON in body in fetch everywhere
 - think about covering fetch in some shorter function
 - think if you should return DB errors
 - remove fetchAll from DB requests where it isn't needed
@@ -56,5 +56,3 @@ TODO
 - add sharing image on social networks
 - remove ` from all DB requests where not needed
 - check why sendQuery doesn't work with limit param in external variable
-- make sure that body of all fetches is an object
-- find out if fetch body containing of one value is OK
