--- a/todo
+++ b/todo
@@ -37,12 +37,12 @@ TODO
 + remove fetchAll from DB requests where it isn't needed
 + remove ` from all DB requests where not needed
 + add the ability to delete comments (not mandatory)
++ add redirect to 404 page
 
 - find out what to do for verification email to be send from local server
 - check if I can use isset to find out if the user is logged in
 - create account page layout
 - check if more Route conditions should be added to web.php
-- commented 404 redirect from now; check what happens with it
 - replace names with "picture" with "photo"
 - check if I can make corner sticker resizing better
 - check if drag and drop works smoothly (not really now)
