--- a/todo
+++ b/todo
@@ -56,6 +56,8 @@ TODO
 + add the ability to remove like
 + check if I can make corner sticker resizing better
 + check if drag and drop works smoothly (not really now)
++ check why comment input doesn't have border
++ add site logo
 
 
 
@@ -63,16 +65,6 @@ TODO
 - think about covering fetch in some shorter function
 - think about what happens with fetch when DB error happens
 - empty $_SESSION data in one function
-- check why comment input doesn't have border
 - make sure that layout is responsive
-- add site logo
 - find out why though min width is there, elements go crazy
-
-render likeIcon (call getLikeStatus for it)
-render likeEl (call getLikes for it)
-
-add event listener to likeIcon, which does the following:
-	like or dislike depending on like status on server
-	change like status on server side
-	rerender likeIcon
-	rerender likeEl
+- move website to free hosting
