--- a/todo
+++ b/todo
@@ -65,6 +65,8 @@ TODO
 + add publish comment button
 + replace all binds with lambdas
 + make sure that two emails cannot be equal
++ check what happens with spaces in email, login and password
++ make sure that two logins cannot be equal
 
 
 
@@ -83,7 +85,6 @@ TODO
 - check if I need to use https://css-tricks.com/almanac/properties/t/text-transform/ anywhere
 - replace let with const where possible
 - style reset password page
-- check what happens with spaces in email, login and password
 
 
 
